source/opencvd/imgproc.d

// enum cv::ContourApproximationModes for findContours
enum: int {
    CHAIN_APPROX_NONE,
    CHAIN_APPROX_SIMPLE,
    CHAIN_APPROX_TC89_L1,
    CHAIN_APPROX_TC89_KCOS
}

Contours findContours(Mat src, int mode, int method){
    return FindContours(src, mode, method);
}

Tuple!(Contours, Hierarchy) findContoursWithHier(Mat src, int mode, int method){
    Hierarchy *chier;// = null;
    auto cntrs = FindContoursWithHier(src, &chier, mode, method);
    //chier.scalars.writeln;
    Hierarchy rethie = {scalars: chier.scalars, length: chier.length};
    destroy(chier);
    return tuple(cntrs, rethie);
}

int connectedComponents(Mat src, Mat dst, int connectivity, int ltype, int ccltype){
    return ConnectedComponents(src, dst, connectivity, ltype, ccltype);
}

int connectedComponentsWithStats(Mat src, Mat labels, Mat stats, Mat centroids, int connectivity, int ltype, int ccltype){
    return ConnectedComponentsWithStats(src, labels, stats, centroids, connectivity, ltype, ccltype);
}

void gaussianBlur(Mat src, Mat dst, Size ps, double sX, double sY, int bt){
    GaussianBlur(src, dst, ps, sX, sY, bt);
}

void laplacian(Mat src, Mat dst, int dDepth, int kSize, double scale, double delta, int borderType){
    Laplacian(src, dst, dDepth, kSize, scale, delta, borderType);
}

void scharr(Mat src, Mat dst, int dDepth, int dx, int dy, double scale, double delta,
            int borderType){
    Scharr(src, dst, dDepth, dx, dy, scale, delta, borderType);
}

enum: int { // cv::MorphShapes
    MORPH_RECT,
    MORPH_CROSS,
    MORPH_ELLIPSE
}

Mat getStructuringElement(int shape, Size ksize){
    return getStructuringElement(shape, ksize);
}

Mat getStructuringElement(int shape, Size ksize, Point anchor){
    return GetStructuringElementWithAnchor(shape, ksize, anchor);
}

enum: int { // cv::MorphTypes
    MORPH_ERODE,
    MORPH_DILATE,
    MORPH_OPEN,
    MORPH_CLOSE,
    MORPH_GRADIENT,
    MORPH_TOPHAT,
    MORPH_BLACKHAT,
    MORPH_HITMISS
}

void morphologyEx(Mat src, Mat dst, int op, Mat kernel){
    MorphologyEx(src, dst, op, kernel);
}

void medianBlur(Mat src, Mat dst, int ksize){
    MedianBlur(src, dst, ksize);
}

void canny(Mat src, Mat edges, double t1, double t2){
    Canny(src, edges, t1, t2);
}

void canny(Mat dx, Mat dy, Mat edges, double threshold1, double threshold2, bool L2gradient = false){
    Canny2(dx, dy, edges, threshold1, threshold2, L2gradient);
}

void cornerSubPix(Mat img, Mat corners, Size winSize, Size zeroZone, TermCriteria criteria){
    CornerSubPix(img, corners, winSize, zeroZone, criteria);
}

void goodFeaturesToTrack(Mat img, Mat corners, int maxCorners, double quality, double minDist){
    GoodFeaturesToTrack(img, corners, maxCorners, quality, minDist);
}

void houghCircles(Mat src, Mat circles, int method, double dp, double minDist){
    HoughCircles(src, circles, method, dp, minDist);
}
void houghCirclesWithParams(Mat src, Mat circles, int method, double dp, double minDist,
                            double param1, double param2, int minRadius, int maxRadius){
    HoughCirclesWithParams(src, circles, method, dp, minDist,
                            param1, param2, minRadius, maxRadius);
}

void houghLines(Mat src, Mat lines, double rho, double theta, int threshold){
    HoughLines(src, lines, rho, theta, threshold);
}

void houghLinesP(Mat src, Mat lines, double rho, double theta, int threshold){
    HoughLinesP(src, lines, rho, theta, threshold);
}

void houghLinesPWithParams(Mat src, Mat lines, double rho, double theta, int threshold, double minLineLength, double maxLineGap){
    HoughLinesPWithParams(src, lines, rho, theta, threshold, minLineLength, maxLineGap);
}

void houghLinesPointSet(Mat points, Mat lines, int lines_max, int threshold,
                        double min_rho, double  max_rho, double rho_step,
                        double min_theta, double max_theta, double theta_step){
    HoughLinesPointSet(points, lines, lines_max, threshold,
                        min_rho, max_rho, rho_step,
                        min_theta, max_theta, theta_step);
}

enum: int {
    THRESH_BINARY,
    THRESH_BINARY_INV,
    THRESH_TRUNC,
    THRESH_TOZERO,
    THRESH_TOZERO_INV,
    THRESH_MASK,
    THRESH_OTSU,
    THRESH_TRIANGLE
}

void threshold(Mat src, Mat dst, double thresh, double maxvalue, int typ){
    Threshold(src, dst, thresh, maxvalue, typ);
}

void adaptiveThreshold(Mat src, Mat dst, double maxValue, int adaptiveTyp, int typ, int blockSize,
                       double c){
    AdaptiveThreshold(src, dst, maxValue, adaptiveTyp, typ, blockSize, c);
}


void arrowedLine(Mat img, Point pt1, Point pt2, Scalar color, int thickness){
    ArrowedLine(img, pt1, pt2, color, thickness);
}

void circle(Mat img, Point center, int radius, Scalar color, int thickness){
    Circle(img, center, radius, color, thickness);
}

void ellipse(Mat img, Point center, Point axes, double angle, double
             startAngle, double endAngle, Scalar color, int thickness){
    Ellipse(img, center, axes, angle, startAngle, endAngle, color, thickness);
}

void line(Mat img, Point pt1, Point pt2, Scalar color, int thickness){
    Line(img, pt1, pt2, color, thickness);
}

void rectangle(Mat img, Rect rect, Scalar color, int thickness){
    Rectangle(img, rect, color, thickness);
}

enum: int { // cv::LineTypes
    FILLED = -1, 
    LINE_4 = 4, 
    LINE_8 = 8, 
    LINE_AA = 16
}

void rectangle(Mat img, Point _pt1, Point _pt2, Scalar color, int thickness = 1, int lineType = LINE_8, int shift = 0){
    Rectangle2(img, _pt1, _pt2, color, thickness, lineType, shift);
}

void fillPoly(Mat img, Contours points, Scalar color){
    FillPoly(img, points, color);
}

Size getTextSize(string text, int fontFace, double fontScale, int thickness){
    return GetTextSize(toStringz(text), fontFace, fontScale, thickness);
}

void putText(Mat img, string text, Point org, int fontFace, double fontScale,
             Scalar color, int thickness){
    PutText(img, toStringz(text), org, fontFace, fontScale, color, thickness);
}

void resize(Mat src, Mat dst, Size sz, double fx, double fy, int interp){
    Resize(src, dst, sz, fx, fy, interp);
}

Mat getRotationMatrix2D(Point center, double angle, double scale){
    return GetRotationMatrix2D(center, angle, scale);
}

void warpAffine(Mat src, Mat dst, Mat rot_mat, Size dsize){
    WarpAffine(src, dst, rot_mat, dsize);
}

void warpAffineWithParams(Mat src, Mat dst, Mat rot_mat, Size dsize, int flags, int borderMode,
                          Scalar borderValue){
    WarpAffineWithParams(src, dst, rot_mat, dsize, flags, borderMode, borderValue);
}

void warpPerspective(Mat src, Mat dst, Mat m, Size dsize){
    WarpPerspective(src, dst, m, dsize);
}

void applyColorMap(Mat src, Mat dst, int colormap){
    ApplyColorMap(src, dst, colormap);
}

void applyCustomColorMap(Mat src, Mat dst, Mat colormap){
    ApplyCustomColorMap(src, dst, colormap);
}

Mat getPerspectiveTransform(Contour src, Contour dst){
    return GetPerspectiveTransform(src, dst);
}

void drawContours(Mat src, Contours contours, int contourIdx, Scalar color, int thickness){
    DrawContours(src, contours, contourIdx, color, thickness);
}

void drawContours(
            Mat image,
            Contours contours,
            int contourIdx,
            Scalar color,
            int thickness,
            int lineType,
            Hierarchy hierarchy,
            int maxLevel,
            Point offset = Point(0,0)
        ){
    DrawContours2(image, contours, contourIdx, color, thickness, lineType, hierarchy, maxLevel, offset);
}

void sobel(Mat src, Mat dst, int ddepth, int dx, int dy, int ksize, double scale, double delta, int borderType){
    Sobel(src, dst, ddepth, dx, dy, ksize, scale, delta, borderType);
}

void spatialGradient(Mat src, Mat dx, Mat dy, int ksize, int borderType){
    SpatialGradient(src, dx, dy, ksize, borderType);
}

void remap(Mat src, Mat dst, Mat map1, Mat map2, int interpolation, int borderMode, Scalar borderValue){
    Remap(src, dst, map1, map2, interpolation, borderMode, borderValue);
}

void filter2D(Mat src, Mat dst, int ddepth, Mat kernel, Point anchor, double delta, int borderType){
    Filter2D(src, dst, ddepth, kernel, anchor, delta, borderType);
}

void sepFilter2D(Mat src, Mat dst, int ddepth, Mat kernelX, Mat kernelY, Point anchor, double delta, int borderType){
    SepFilter2D(src, dst, ddepth, kernelX, kernelY, anchor, delta, borderType);
}

void logPolar(Mat src, Mat dst, Point center, double m, int flags){
    LogPolar(src, dst, center, m, flags);
}

void fitLine(Contour points, Mat line, int distType, double param, double reps, double aeps){
    FitLine(points, line, distType, param, reps, aeps);
}

void watershed(Mat src, Mat markers){
    Watershed(src, markers);
}

int floodFill(Mat image, Mat mask, Point seedPoint, Scalar  newVal,
                Rect rect, Scalar loDiff, Scalar upDiff, int flags){
    return FloodFill(image, mask, seedPoint, newVal, rect, loDiff, upDiff, flags);
}

// Contrast-limited adaptive histogram equalization
struct _CLAHE{
	void* p;
    
    void close(){
        CLAHE_Close(&this);
    }
    
    void apply(Mat src, Mat dst){
        CLAHE_Apply(&this, src, dst);
    }
}

alias CLAHE = _CLAHE*;

CLAHE newCLAHE(){ // implement in 'this'?
    return CLAHE_Create();
}

CLAHE newCLAHEWithParams(double clipLimit, Size tileGridSize){ // implement in 'this'?
    return CLAHE_CreateWithParams(clipLimit, tileGridSize);
}

enum: int {
    COLOR_BGR2BGRA = 0, 

    COLOR_RGB2RGBA = COLOR_BGR2BGRA, 

    COLOR_BGRA2BGR = 1, 

    COLOR_RGBA2RGB = COLOR_BGRA2BGR, 

    COLOR_BGR2RGBA = 2, 

    COLOR_RGB2BGRA = COLOR_BGR2RGBA, 

    COLOR_RGBA2BGR = 3, 

    COLOR_BGRA2RGB = COLOR_RGBA2BGR, 

    COLOR_BGR2RGB = 4, 

    COLOR_RGB2BGR = COLOR_BGR2RGB, 

    COLOR_BGRA2RGBA = 5, 

    COLOR_RGBA2BGRA = COLOR_BGRA2RGBA, 

    COLOR_BGR2GRAY = 6, 

    COLOR_RGB2GRAY = 7, 

    COLOR_GRAY2BGR = 8, 

    COLOR_GRAY2RGB = COLOR_GRAY2BGR, 

    COLOR_GRAY2BGRA = 9, 

    COLOR_GRAY2RGBA = COLOR_GRAY2BGRA, 

    COLOR_BGRA2GRAY = 10, 

    COLOR_RGBA2GRAY = 11, 

    COLOR_BGR2BGR565 = 12, 

    COLOR_RGB2BGR565 = 13, 

    COLOR_BGR5652BGR = 14, 

    COLOR_BGR5652RGB = 15, 

    COLOR_BGRA2BGR565 = 16, 

    COLOR_RGBA2BGR565 = 17, 

    COLOR_BGR5652BGRA = 18, 

    COLOR_BGR5652RGBA = 19, 

    COLOR_GRAY2BGR565 = 20, 

    COLOR_BGR5652GRAY = 21, 

    COLOR_BGR2BGR555 = 22, 

    COLOR_RGB2BGR555 = 23, 

    COLOR_BGR5552BGR = 24, 

    COLOR_BGR5552RGB = 25, 

    COLOR_BGRA2BGR555 = 26, 

    COLOR_RGBA2BGR555 = 27, 

    COLOR_BGR5552BGRA = 28, 

    COLOR_BGR5552RGBA = 29, 

    COLOR_GRAY2BGR555 = 30, 

    COLOR_BGR5552GRAY = 31, 

    COLOR_BGR2XYZ = 32, 

    COLOR_RGB2XYZ = 33, 

    COLOR_XYZ2BGR = 34, 

    COLOR_XYZ2RGB = 35, 

    COLOR_BGR2YCrCb = 36, 

    COLOR_RGB2YCrCb = 37, 

    COLOR_YCrCb2BGR = 38, 

    COLOR_YCrCb2RGB = 39, 

    COLOR_BGR2HSV = 40, 

    COLOR_RGB2HSV = 41, 

    COLOR_BGR2Lab = 44, 

    COLOR_RGB2Lab = 45, 

    COLOR_BGR2Luv = 50, 

    COLOR_RGB2Luv = 51, 

    COLOR_BGR2HLS = 52, 

    COLOR_RGB2HLS = 53, 

    COLOR_HSV2BGR = 54, 

    COLOR_HSV2RGB = 55, 

    COLOR_Lab2BGR = 56, 

    COLOR_Lab2RGB = 57, 

    COLOR_Luv2BGR = 58, 

    COLOR_Luv2RGB = 59, 

    COLOR_HLS2BGR = 60, 

    COLOR_HLS2RGB = 61, 

    COLOR_BGR2HSV_FULL = 66, 

    COLOR_RGB2HSV_FULL = 67, 

    COLOR_BGR2HLS_FULL = 68, 

    COLOR_RGB2HLS_FULL = 69, 

    COLOR_HSV2BGR_FULL = 70, 

    COLOR_HSV2RGB_FULL = 71, 

    COLOR_HLS2BGR_FULL = 72, 

    COLOR_HLS2RGB_FULL = 73, 

    COLOR_LBGR2Lab = 74, 

    COLOR_LRGB2Lab = 75, 

    COLOR_LBGR2Luv = 76, 

    COLOR_LRGB2Luv = 77, 

    COLOR_Lab2LBGR = 78, 

    COLOR_Lab2LRGB = 79, 

    COLOR_Luv2LBGR = 80, 

    COLOR_Luv2LRGB = 81, 

    COLOR_BGR2YUV = 82, 

    COLOR_RGB2YUV = 83, 

    COLOR_YUV2BGR = 84, 

    COLOR_YUV2RGB = 85, 

    COLOR_YUV2RGB_NV12 = 90, 

    COLOR_YUV2BGR_NV12 = 91, 

    COLOR_YUV2RGB_NV21 = 92, 
